--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,64 @@
+@import url("https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Handjet&display=swap");
+
 .container {
+  max-width: 500px;
+  margin: 0 auto;
   text-align: center;
 }
 h1 {
   display: block;
   text-align: center;
+  font-family: "Bruno Ace SC", cursive;
 }
-footer {
+select {
   display: block;
+  margin: 0 auto;
+  width: 300px;
+  padding: 8px;
+  border-radius: 5px;
+}
+h2 {
+  font-size: 80px;
+  margin: 0 0 5px;
+  font-size: 28px;
+}
+.city {
+  display: flex;
+  justify-content: space-between;
+  font-family: "Bruno Ace SC", cursive;
+  margin: 10px 0;
+  padding: 30px 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+.date {
+  opacity: 0.7;
+}
+
+.time {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.time small {
+  font-size: 8px;
+  vertical-align: middle;
+  line-height: 48px;
+}
+.footer {
   text-align: center;
+  margin: 0 auto;
+  display: block;
+  font-family: "Handjet", cursive;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.foot {
+  text-decoration: none;
+  color: black;
+}
+.foot:hover {
+  cursor: pointer;
+  background: black;
+  color: greenyellow;
 }
