--- a/src/style.css
+++ b/src/style.css
@@ -68,6 +68,7 @@ h2 {
   font-family: "Handjet", cursive;
   font-size: 15px;
   font-weight: bolder;
+  color: black;
 }
 .foot {
   text-decoration: none;
